# Gandalf

./: .gitignore  CMakeLists.txt  README.md  dataset.h  gui.cpp  gui.h  main.cpp  model.h
